# cai

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CALL.html  Cybersecuritypythonrubyproject  LICENSE  README.md  TODO_project_analysis.md  balanced_fast_scanner.txt  changes.diff  custom_wordlist.txt  fast_port_scanner.txt  fastportscan.py  fastportscan.txt  gobuster_results.txt  gobuster_scan.txt  gobuster_scan_results  gpt4-5-hackableII.cast  hackable2_nmap.txt  http_request.py  improved_scanner.txt  index.html  initial_nmap_scan.txt  initial_scan.nmap  initial_scan.txt  ip_request.py  mkdocs.yml  nikto_scan.txt  nmap_initial.out  nmap_initial.txt  nmap_initial_scan.txt  nmap_results.txt  nmap_scan.txt  nmap_scan_result.txt  nmap_scan_results.txt  nmap_style_scanner.txt  port_scanner.txt  portscan.txt  (+15 more)
.cai/: history.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  docker-compose.yml.robots
192.168.2.11/: .listing  index.html
agents/: index.html
benchmarks/: README.md
cai/: __init__.py  cli.py  constants.py  core.py  datarecorder.py  graph.py  index.html  logger.py  train_data.py  types.py  util.py
cai_architecture/: index.html
cai_benchmark/: index.html
cai_citation_and_acknowledgments/: index.html
cai_development/: index.html
cai_faq/: index.html
cai_find_us/: index.html
cai_installation/: index.html
cai_list_of_models/: index.html
cai_pro/: index.html
cai_pro_contact/: index.html
cai_pro_quickstart/: index.html
cai_prompt_injection/: index.html
cai_quickstart/: index.html
config/: index.html
context/: index.html
cyberPII-bench/: README.md
dockerized/: Dockerfile  docker-compose.yaml
docs/: Installation_Guide_for_CAI_Pro_v0.5.md  Installation_Guide_for_CAI_Pro_v0.6.md  agents.md  cai_benchmark.md  cai_faq.md  cai_installation.md  cai_pro.md  cai_pro_quickstart.md  environment_variables.md
environment_variables/: index.html
examples/: index.html
goportscan/: go.mod  main.go
guardrails/: index.html
handoffs/: index.html
index2/: index.html
mcp/: index.html
models/: index.html
multi_agent/: index.html
quickstart/: index.html
ref/: index.html
report/: Report_2025-02-07_14-37-01.md  Report_2025-02-07_14-37-20.md  Report_2025-02-07_14-37-38.md  Report_2025-02-07_14-37-55.md  Report_2025-02-07_14-42-58.md  Report_2025-02-07_14-43-51.md  Report_2025-02-07_14-47-45.md  Report_2025-02-07_14-49-35.md  Report_2025-02-07_14-50-33.md  Report_2025-02-07_14-51-34.md  Report_2025-02-07_14-53-06.md  Report_2025-02-07_14-54-01.md  report1.md
research/: index.html
results/: index.html
running_agents/: index.html
search/: search_index.json
streaming/: index.html
swarm/: __init__.py  core.py  types.py  util.py
tests/: test_core.py  test_fix_message_list_reorder.py  test_util.py
tools/: 0_ollama_extend_context.sh  1_report_from_jsonl.py  (+9 more)
(+367 files in other folders)
