[metadata]
name = cai
version = 0.2.1
author = Alias Robotics
description = A lightweight, ergonomic framework for building Bug Bounty-level grade Cybersecurity AIs (CAIs)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    litellm>=1.49.1
    pytest
    requests
    tqdm
    pre-commit
    instructor
    wasabi
    mako
    pentestperf @ git+https://gitlab:gldt-1NfZ2XRWdHNip4K45auL@gitlab.com/aliasrobotics/alias_research/pentestperf@ctfs_review
    opentelemetry-api
    pytz
python_requires = >=3.10

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
