[metadata]
name = cai
version = 0.3.8
author = Alias Robotics
description = A lightweight, ergonomic framework for building Bug Bounty-level grade Cybersecurity AIs (CAIs)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    litellm>=1.65.0
    pytest
    requests
    tqdm
    pre-commit
    instructor
    wasabi
    mako
    opentelemetry-api
    pytz
    matplotlib
    pydot==1.4.2
    tokencost
    arize-phoenix
    openinference_instrumentation_openai
    qdrant_client
    scipy
    sentence_transformers
    prompt_toolkit
    mcp
    importlib-resources>=5.0.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    cai = cai.cli:main

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
